<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Tipsy</string>
    <string name="dollar_Amt">$0.00</string>
    <string name="rest_loc">Restaurant location (to determine taxes):</string>
    <string name="set_tax_label">Set city/tax rate</string>

    <!-- Bill Activity -->
    <string name="guest_number">No. of guests:</string>
    <string name="tip_Label">Tip is:</string>
    <string name="total_Label">Total is:</string>

    <!-- Calc Activity -->
    <string name="calc_activity">Calculator</string>
    <string name="meal_Amt">Enter Meal Amount</string>
    <string name="meal_Label">Enter total meal amount:</string>
    <string name="calculate">Calc meal/tip</string>
    <string name="custom_Label">Or Enter Custom Tip Amt:</string>

    <string name="service_level">Select custom service level tip</string>
    <string name="percent_Amt"></string>
    <string name="bad_service">Bad Service :Σ </string>
    <string name="bad_tip">.10</string>
    <string name="mediocre_service">Mediocre Service :( </string>
    <string name="mediocre_tip">.15</string>
    <string name="average_service">Average Service :| </string>
    <string name="average_tip">.18</string>
    <string name="good_service">">Good Service :) "</string>
    <string name="good_tip">.20</string>
    <string name="great_service">"Great Service :D "</string>
    <string name="great_tip">.25</string>


</resources>
