<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/glass_splash"
    tools:context=".BillActivity" >

    <TextView
        android:id="@+id/textView"
        android:text="Bill Sub-total:"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etBillAmt"
        android:hint="@string/dollar_Amt"
        android:ems="10"
        android:textSize="14sp"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:digits="1234567890.$"
        android:gravity="right|bottom"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/textView"
        android:layout_alignBottom="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spGuestNumber"
        android:layout_alignStart="@+id/spGuestNumber" />
        <requestFocus />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/guest_number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="left"

        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spGuestNumber"
        android:entries="@array/guest_number_array"
        android:gravity="right|bottom"

        android:layout_alignParentRight="true"
        android:layout_below="@+id/etBillAmt"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginLeft="75dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnSetTaxes"
        android:text="@string/set_tax_label"
        android:textStyle="bold"
        android:onClick="onSetTaxes"

        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView2"
        android:layout_marginTop="15dp"
        android:layout_marginRight="130dp"/>

    <Button
        android:id="@+id/btnCalculate"
        android:text="@string/calculate"
        android:textStyle="bold"
        android:gravity="center"
        android:onClick="onCalculateMeal"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@id/spGuestNumber"
        android:layout_below="@+id/spGuestNumber"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/tvMealDiff"
        android:hint="@string/dollar_Amt"
        android:ems="10"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="right|bottom"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/btnCalculate"
        android:layout_alignStart="@+id/etBillAmt"
        android:layout_alignEnd="@+id/etBillAmt"
        android:layout_above="@+id/lvGuests"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <TextView

        android:id="@+id/tv_data"
        android:text=" "

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lvGuests" />

    <ListView
        android:id="@+id/lvGuests"

        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />
    <!-- don't set layout height in ListView to wrap -->

</RelativeLayout>
<!-- From: file:/Users/dianna/Google%20Drive/dev/AndroidStudioProjects/Tipsy/app/src/main/res/layout/activity_bill.xml -->